Update and clean up

--- a/console.html
+++ b/console.html
@@ -11,9 +11,6 @@
 
     <body>
         <button type="button" id="init">Connect</button>
-        <div id="log">
-            <p>display some output here?</p>
-        </div>
         <div id="blacklist">
             <p>Blacklist domain</p>
             <input type="text" name="blacklist" id="blacklist_in" >
@@ -21,10 +18,11 @@
         </div>
         <table id="logtable">
                 <tr>
-                    <th>Connection</th>
+                    <th>url</th>
                     <th>connected</th>
                     <th>received</th>
                     <th>closed</th>
+                    <th>bandwidth</th>
                 </tr>
         </table>
     </body>
